<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/ll_top_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_prepaid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_prepaid" />

        <Button
            android:id="@+id/btn_singalpaid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_singalpaid" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_top_btn"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/sp_product_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_TBLR_10"
            android:prompt="@string/sp_prompt" />

        <EditText
            android:id="@+id/et_customer_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_TBLR_10"
            android:hint="@string/et_customer_hint"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_info"
        android:layout_margin="@dimen/margin_TBLR_10"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/lb_input_account" />

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/et_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="$0.00" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_account"
        android:layout_margin="@dimen/margin_TBLR_10"
        android:text="@string/btn_pay" />

</RelativeLayout>